force-app/main/default/objects/BGBK__Payment__c/BGBK__Payment__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Payment Allocations of receipts</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>PY-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>