force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Account__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments as Account</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>