force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Amount_Used__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Amount_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Deprecated.</description>
    <label>Used Amount (Deprecated)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>