force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Complaint__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint (Deprecated)</label>
    <referenceTo>MUSW__Complaint__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>