force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Deposit__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system populates this field when a deposit iis used to pay a fee.</description>
    <label>Deposit</label>
    <referenceTo>MUSW__Deposit__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>