force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Description__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Description__c</fullName>
    <description>Deprecated.</description>
    <label>Description (Deprecated)</label>
    <type>TextArea</type>
</CustomField>