force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Initial_Fund_Reference_Number_del__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Initial_Fund_Reference_Number_del__c</fullName>
    <description>Deprecated.</description>
    <formula>IF(ISPICKVAL(BGBK__Permit__r.MUSW__Permit_Type__c, &apos;Surface Impact Payment&apos;), &apos;534 060 0102 534&apos;,&apos;533 060 0102 533&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Fund Reference No (Deprecated)</label>
    <type>Text</type>
</CustomField>