force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Invoice__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>BGBK__Bill__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>