force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__License1__c.field-meta.xml
<CustomField>
    <fullName>BGBK__License1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License (Deprecated)</label>
    <referenceTo>MUSW__License1__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>