force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Loss_Overage_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Loss_Overage_Amount__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Minor adjustment to balance accounts. Used under a specified threshold</inlineHelpText>
    <label>Loss/Overage Amount (Deprecated)</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>