force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Source__c</fullName>
    <description>Source of fee payment: Either Receipt record or Deposit record</description>
    <formula>IF(OR(ISNULL( BGBK__Deposit__c ), BGBK__Deposit__c  = &quot;&quot;),
	If(OR(ISNULL( BGBK__Receipt__c),  BGBK__Receipt__c = &quot;&quot;),
		&quot;&quot;, HYPERLINK( &quot;/&quot; &amp; BGBK__Receipt__c,BGBK__Receipt__r.Name,&quot;_parent&quot; )),
	HYPERLINK( &quot;/&quot; &amp; BGBK__Deposit__c,BGBK__Deposit__r.Name,&quot;_parent&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Source</label>
    <type>Text</type>
</CustomField>