force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Permit__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit (Deprecated)</label>
    <referenceTo>MUSW__Permit__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>