force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Receipt__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Receipt__c</fullName>
    <label>Receipt</label>
    <referenceTo>MUSW__Receipt__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>