force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Refund_Receipt_Payer__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Refund_Receipt_Payer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated.</description>
    <label>Refund Receipt Payer (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>