force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Refunded_Amount__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Total of any Refunds</inlineHelpText>
    <label>Refunded Amount (Deprecated)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>