force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Return__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return</label>
    <referenceTo>BGBK__Return__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>