force-app/main/default/objects/BGBK__Payment__c/validationRules/BGBK__Payment_Reject_greater_than_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Payment_Reject_greater_than_Available</fullName>
    <active>true</active>
    <description>Cannot reject used amounts.</description>
    <errorConditionFormula>AND(BGBK__Amount__c - BGBK__Amount_Used__c + BLANKVALUE(BGBK__Loss_Overage_Amount__c,0)  &lt;  BLANKVALUE(BGBK__Rejected_Amount__c,0), ISCHANGED(BGBK__Rejected_Amount__c))</errorConditionFormula>
    <errorDisplayField>BGBK__Rejected_Amount__c</errorDisplayField>
    <errorMessage>Cannot Reject more than the Available Payment Amount.</errorMessage>
</ValidationRule>